test/syntax-errors/instruction4.sos
# instruction invalide

id + 1